--- a/src/app/views/registro/registro.component.css
+++ b/src/app/views/registro/registro.component.css
@@ -18,6 +18,8 @@
 .largo{
   width: 80%; 
   height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .information {
@@ -35,8 +37,18 @@
   position: absolute; 
   left: 0;
   top: 110px;
- 
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
+}
+
+.imagen {
+
+  width: 350px; 
+  height: 250px; 
+  position: relative; 
+  transform: translateY(-76px);
 }
 
 .registro {
@@ -55,7 +67,7 @@
     width: 700px; 
     height: 590px;
     background: #191919;
-    border: 3px solid #fff;
+    border: 3px solid ;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
@@ -83,7 +95,7 @@
 
   color: #fff;
     text-align: left;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
     font-family: inter;
@@ -110,6 +122,7 @@
   color: #fff;
   display: flex;
   justify-content: center;
+  margin-top: 40px;
 }
 
 .color{
@@ -129,7 +142,7 @@ margin-bottom: 5px;
   border: solid 1px white;
   position: relative;
   margin-left: 100px;
-  
+  margin-top: 10px;
   
 }
 
@@ -176,7 +189,6 @@ margin-bottom: 5px;
   padding: 15px 13px 15px;
   width: 90%;
   height: 30px;
-  margin-bottom: 18px;
   color: white;
   background-color: transparent;
   box-shadow: none; /* Firefox */
@@ -185,7 +197,8 @@ margin-bottom: 5px;
   line-height: inherit;
   caret-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
   transition: border 0.2s, box-shadow 0.2s;
-  margin-bottom: 10px;
+ 
+
 
 }
 
@@ -205,6 +218,8 @@ margin-bottom: 5px;
   line-height: 15px;
   cursor: text;
   transition: color 0.2s, font-size 0.2s, line-height 0.2s;
+  
+  
 }
 
 /* Corners */
@@ -353,16 +368,17 @@ margin-bottom: 5px;
 
   display: flex;
   font-display: row;
+  margin-bottom: 2px;
 }
 
 .control {
   display: block;
   position: relative;
   padding-left: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   cursor: pointer;
-  font-size: 20px;
-  color: #afafaf;
+  font-size: 15px;
+  color:white;
   margin: 6px 10px;
 }
 
@@ -370,6 +386,121 @@ margin-bottom: 5px;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+}
+
+/* button*/
+
+.boton {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.pure-material-button-contained {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 20px;
+  padding: 0 16px;
+  min-width: 100px;
+  height: 50px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  background-color: #224afb;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
+
+.pure-material-button-contained::-moz-focus-inner {
+  border: none;
+}
+
+/* Overlay */
+.pure-material-button-contained::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+/* Ripple */
+.pure-material-button-contained::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  padding: 50%;
+  width: 40px; /* Safari */
+  height: 32px; /* Safari */
+  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 1s, transform 0.5s;
+}
+
+/* Hover, Focus */
+.pure-material-button-contained:hover,
+.pure-material-button-contained:focus {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.pure-material-button-contained:hover::before {
+  opacity: 0.08;
+}
+
+.pure-material-button-contained:focus::before {
+  opacity: 0.24;
+}
+
+.pure-material-button-contained:hover:focus::before {
+  opacity: 0.3;
+}
+
+/* Active */
+.pure-material-button-contained:active {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.pure-material-button-contained:active::after {
+  opacity: 0.32;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0s;
+}
+
+/* Disabled */
+.pure-material-button-contained:disabled {
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
+  background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.12);
+  box-shadow: none;
+  cursor: initial;
+}
+
+.pure-material-button-contained:disabled::before {
+  opacity: 0;
+}
+
+.pure-material-button-contained:disabled::after {
+  opacity: 0;
 }
 
 
