--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+
 body {
-  background: #000;
+  background: transparent;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   overflow: hidden; /* Esto asegura que no haya scroll */
-  
-       
-     }
+  min-height: 100vh;
+  }
