--- a/src/app/views/registro/registro.component.css
+++ b/src/app/views/registro/registro.component.css
@@ -1,168 +1,75 @@
 
-
-.modificadores{
-  background: black;
-  height: 100px;
-  width:  100%;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  margin: 0;
-  margin-left: 0;
-  margin-right: 0;
-
-  
- 
+:root {
+  --font-family: sans-serif,arial;
 }
-
-.largo{
-  width: 80%; 
+/*Register*/
+.retroceso {
+  width: 70%; 
   height: auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.information {
-  width: 100%; 
-  height: 100%;
-  position: relative;
-}
-
-
-
-.image {
-  background:  black;
-  width: 600px; 
-  height: 600px; 
-  position: absolute; 
-  left: 0;
+  background: transparent;
+  left: 550px;
   top: 110px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
+  position: absolute; 
+  margin: -30px;
 }
 
-.imagen {
-
-  width: 350px; 
-  height: 250px; 
-  position: relative; 
-  transform: translateY(-76px);
+.registro-ok {
+  width: 100%; 
+  height: auto;
 }
 
-.registro {
-
-    width: 65%; 
-    height: 600px;
-    background-color: black; 
-    position: absolute; 
-    left: 550px;
-    top: 110px;
-    
-  
-}
 
 .register {
-    width: 700px; 
-    height: 590px;
-    background: #191919;
-    border: 3px solid ;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-    position:relative;
-    overflow: auto;
-    overflow-y: auto;
-}
-
-.center{
-  color: #fff;
+  width: 600px; 
+  height: 600px;
+  background: #191919;
+  border: 3px solid blue;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
   text-align: left;
-  font-size: 14px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  font-family: inter;
-  margin-left: 300px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  overflow-y: auto;
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #555 #191919; /* Firefox */
+  left: 550px;
+  top: 110px;
+
 }
 
+.titulo{
+  display: flex;
+  justify-content: center;
+  margin-left: 30px;
+  margin-bottom: 10px;
+  color:white;
+  font-size: 35px;
+  font-family: arial;
+  font-weight: bold;
+}
 
- .data {
+.data {
 
   color: #fff;
     text-align: left;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
-    font-family: inter;
+    font-family:  arial;
     margin-left: 40px;
    
 }
 
-.controlradio {
-  display: flex;
-  margin-left: 200px;
-  color: white;
-  font-size: 9px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 15px;
-}
 
-
-
-.form-check-label{
-  color: #fff;
-}
-
-.terms{
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  margin-top: 40px;
-}
-
-.color{
-color: blue;
-font-size: 13px;
-margin-bottom: 5px;
-}
-
-.tipo {
-  background-color: transparent;
-  color: white;
-  font-size: 13px;
-  width: 72%;
-  height: 30px;
-  border-radius: 4px;
-  padding: 5px;
-  border: solid 1px white;
-  position: relative;
-  margin-left: 100px;
-  margin-top: 10px;
-  
-}
-
-/* Añadir flecha personalizada */
-.tipo::after {
-  content: '▼'; /* Símbolo de flecha hacia abajo */
-  color: white;
-  position: absolute;
-  right: 100px;
-  top: 50%;
-  transform: translateY(-50%);
-  pointer-events: none; /* Asegura que la flecha no interfiera con la selección */
-}
-
-.tipo option {
-  background-color: #191919; 
+.largo{
+  width: 75%; 
+  height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
   color: white;
 }
-
-
 
 .pure-material-textfield-outlined {
   --pure-material-safari-helper1: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
@@ -182,12 +89,12 @@ margin-bottom: 5px;
 .pure-material-textfield-outlined > textarea {
   box-sizing: border-box;
   margin: 0;
-  border: solid 1px; /* Safari */
+  border: solid 1px ; /* Safari */
   border-color: white;
   border-top-color: transparent;
   border-radius: 4px;
   padding: 15px 13px 15px;
-  width: 90%;
+  width: 100%;
   height: 30px;
   color: white;
   background-color: transparent;
@@ -210,7 +117,7 @@ margin-bottom: 5px;
   left: 0;
   display: flex;
   border-color:  white;
-  width: 90%;
+  width: 100%;
   height: 40px;
   max-height: 100%;
   color:  white;
@@ -362,13 +269,93 @@ margin-bottom: 5px;
       }
   }
 }
-/*botton radio*/
+
+
+
+/*contraseña ojo styel*/
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+
+.pure-material-textfield-outlined i {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(15%);
+  cursor: pointer;
+  color: #aaa;
+  z-index: 1;
+}
+
+.pure-material-textfield-outlined i:hover {
+  color: #000;
+}
+
+.tipo {
+  background-color: transparent;
+  color: white;
+  font-size: 13px;
+  width: 100%;
+  height: 30px;
+  border-radius: 4px;
+  padding: 5px;
+  border: solid 1px white;
+  margin-left: 0cap;
+  margin-top: 10px;
+  position: relative;
+}
+/* Añadir flecha personalizada */
+.tipo::after {
+  content: '▼'; /* Símbolo de flecha hacia abajo */
+  color: white;
+  position: absolute;
+  right: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Asegura que la flecha no interfiera con la selección */
+}
+
+.tipo option {
+  background-color: #191919; 
+  color: white;
+}
+
+.center{
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 0px;
+  font-family: var(--font-family);
+  margin-left: 250px;
+  transform: translateY( 0px);
+ 
+}
+
+.che{
+  display: block;
+}
+
+.ches{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin-left: 100px;
+  
+}
 
 .controlradio {
-
   display: flex;
-  font-display: row;
+  margin-left: 50px;
+  color: white;
+  font-size: 10px;
+  font-family: var(--font-family);
   margin-bottom: 2px;
+  transform: translateY( 16px);
+  font-display: row;
 }
 
 .control {
@@ -382,11 +369,37 @@ margin-bottom: 5px;
   margin: 6px 10px;
 }
 
-.terms {
+.terms{
+  color: #fff;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
   margin-bottom: 20px;
+  margin-left: 80px;
+
 }
+
+.terms label {
+  width: 90%;
+  display: flex;
+  font-size: 14px;
+  
+}
+
+
+
+.color{
+  
+  color: blue;
+  font-size: 14px;
+  margin-bottom: 5px;
+  font-family: sans-serif;
+  display: flex;
+  
+  }
+
+
+
 
 /* button*/
 
@@ -502,6 +515,172 @@ margin-bottom: 5px;
 .pure-material-button-contained:disabled::after {
   opacity: 0;
 }
+
+/*Button x */
+
+.circle {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  position: relative;
+  margin-left: -15%;
+}
+
+.button-x {
+  position: relative;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 50%;
+  padding: 0 16px;
+  min-width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  background-color: #555;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
+
+.button-x::-moz-focus-inner {
+  border: none;
+}
+
+/* Overlay */
+.button-x::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+/* Ripple */
+.button-x::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  padding: 50%;
+  width: 40px; /* Safari */
+  height: 32px; /* Safari */
+  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 1s, transform 0.5s;
+}
+
+/* Hover, Focus */
+.button-x:hover,
+.button-x:focus {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.button-x:hover::before {
+  opacity: 0.08;
+}
+
+.button-x:focus::before {
+  opacity: 0.24;
+}
+
+.button-x:hover:focus::before {
+  opacity: 0.3;
+}
+
+/* Active */
+.button-x:active {
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.button-x:active::after {
+  opacity: 0.32;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0s;
+}
+
+/* Disabled */
+.button-x:disabled {
+  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
+  background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.12);
+  box-shadow: none;
+  cursor: initial;
+}
+
+.button-x:disabled::before {
+  opacity: 0;
+}
+
+.button-x:disabled::after {
+  opacity: 0;
+}
+
+
+/*media query*/
+@media screen and (width <= 770px) and (height <= 600px) {
+
+  .body{
+
+  width: 100vh;
+  height: 100vh;
+  overflow: hidden;
+  
+  }
+
+
+.retroceso{
+  position: static;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  margin-top: 0px;
+  margin-left: 0px;
+  max-width: 90%;
+  
+}
+
+  .registro-ok{
+    position: static;
+    width: 100%;
+    height: 100%;
+    padding: 15px 10px 15px;
+    
+  }
+
+  .register{
+   
+    width: 100%;
+    height: 100%;
+    display: flex;
+    left: 0px;
+    top: 0px;
+
+  }
+  
+
+
+
+
+
+}
+
+/*end register */
 
 
 
