--- a/src/app/views/registro/registro.component.css
+++ b/src/app/views/registro/registro.component.css
@@ -1,4 +1,118 @@
 
+/**/
+
+*{
+  font-family: "Inter", sans-serif;
+}
+
+.register-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  color: white; 
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; 
+}
+
+.login-now {
+      height: 50%;
+      width: 30%;
+      display: flex;
+      margin-right: 100px;
+      margin-left: 50px;
+  }
+
+  .stilo {
+    font-weight: bold;
+  }
+.left-info, .right-info {
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+  }
+
+.left-info {
+       display:flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+.logo{
+
+      padding: 1rem;
+      display: inline-block;
+      
+}
+.by-eafit{
+  margin-top:-3.5rem;
+  margin-left:8rem;
+  display:flex;
+  gap: 1rem;
+  align-items: flex-end;
+}
+
+.imagen-logo {
+    width: 5.8rem;
+    height: 2.5rem;
+    flex-shrink: 0;
+}
+
+
+h1 {
+  font-style: italic;
+  font-size: 2rem; 
+  font-weight: 900;
+}
+
+
+h6 {
+  font-size: 0.875rem;
+}
+
+p {
+  font-size: 1.5rem; 
+  font-weight: 300;
+}
+
+
+@media (max-width: 700px) {
+  .login-now {
+    flex-direction: column;
+  }
+
+  .by-eafit {
+    margin-top: -3rem;
+    gap: 0.5rem; 
+  }
+
+  .imagen-logo {
+    width: 4.5rem;
+    height: 2rem; 
+  }
+
+  h1 {
+    font-size: 1.5rem; 
+  }
+
+  p {
+    display: none;
+  }
+  
+  .left-info {
+  flex: 0 0 5%;
+}
+
+.right-info {
+  flex: 0 0 95%; 
+}
+}
+
+
+
+
+
+
 :root {
   --font-family: sans-serif,arial;
 }
@@ -19,7 +133,7 @@
 }
 
 
-.register {
+.registro-ok {
   width: 600px; 
   height: 600px;
   background: #191919;
@@ -44,7 +158,7 @@
   justify-content: center;
   margin-left: 30px;
   margin-bottom: 10px;
-  color:white;
+  color: white;
   font-size: 35px;
   font-family: arial;
   font-weight: bold;
@@ -303,11 +417,13 @@
   border: none;
   color: #fdfdfd;
 }
+
 .button-eye i {
   display: flex;
   justify-content: flex-end;
   transform: translateY( -22px);
-  margin-left: 400px;
+  margin-left: 410px;
+ 
   
 }
 
@@ -400,7 +516,7 @@
   justify-content: center;
   margin-top: 15px;
   margin-bottom: 20px;
-  margin-left: 50px;
+  margin-left: 30px;
 
 
 }
@@ -424,6 +540,37 @@
   margin-top: 20px;
   margin-bottom: 30px;
 }
+.botonn {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 20px;
+  margin-bottom: 30px;
+
+}
+
+#btn-empresa {
+  font-size: 15px;
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  margin-left: 10px;
+  font-weight: bold;
+ 
+}
+
+#btn-consultor {
+  font-size: 14px;
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  margin-left: 5px;
+  font-weight: bold;
+
+}
+
 
 .pure-material-button-contained {
   position: relative;
@@ -441,7 +588,7 @@
   background-color: #224afb;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   line-height: 36px;
   overflow: hidden;
@@ -528,169 +675,19 @@
   opacity: 0;
 }
 
-/*Button x */
 
-.circle {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  position: relative;
-  margin-left: 2%;
-}
-
-.button-x {
-  position: relative;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 50%;
-  padding: 0 16px;
-  min-width: 50px;
-  height: 50px;
-  vertical-align: middle;
-  text-align: center;
-  text-overflow: ellipsis;
-  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-  background-color: #555;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 36px;
-  overflow: hidden;
-  outline: none;
-  cursor: pointer;
-  transition: box-shadow 0.2s;
-}
-
-.button-x::-moz-focus-inner {
-  border: none;
-}
-
-/* Overlay */
-.button-x::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-  opacity: 0;
-  transition: opacity 0.2s;
-}
-
-/* Ripple */
-.button-x::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  border-radius: 50%;
-  padding: 50%;
-  width: 40px; /* Safari */
-  height: 32px; /* Safari */
-  background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(1);
-  transition: opacity 1s, transform 0.5s;
-}
-
-/* Hover, Focus */
-.button-x:hover,
-.button-x:focus {
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-}
-
-.button-x:hover::before {
-  opacity: 0.08;
-}
-
-.button-x:focus::before {
-  opacity: 0.24;
-}
-
-.button-x:hover:focus::before {
-  opacity: 0.3;
-}
-
-/* Active */
-.button-x:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-x:active::after {
-  opacity: 0.32;
-  transform: translate(-50%, -50%) scale(0);
-  transition: transform 0s;
-}
-
-/* Disabled */
-.button-x:disabled {
-  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
-  background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.12);
-  box-shadow: none;
-  cursor: initial;
-}
-
-.button-x:disabled::before {
-  opacity: 0;
-}
-
-.button-x:disabled::after {
-  opacity: 0;
-}
 
 
 /*media query*/
-@media screen and (width <= 770px) and (height <= 600px) {
-
-  .body{
-
-  width: 100vh;
-  height: 100vh;
-  overflow: hidden;
-  
-  }
+@media screen and (max-width <= 700px)  {
 
 
-.retroceso{
-  position: static;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  margin-top: 0px;
-  margin-left: 0px;
-  max-width: 90%;
-  
-}
 
-  .registro-ok{
-    position: static;
-    width: 100%;
-    height: 100%;
-    padding: 15px 10px 15px;
-    
-  }
 
-  .register{
+ 
    
-    width: 100%;
-    height: 100%;
-    display: flex;
-    left: 0px;
-    top: 0px;
-
   }
-  
 
-
-
-
-
-}
 
 /*end register */
 
