--- a/src/app/views/panel-administracion/panel-administracion.component.css
+++ b/src/app/views/panel-administracion/panel-administracion.component.css
@@ -2,43 +2,39 @@
 .admin-panel {
   display: flex;
 }
+
 .main-content {
   flex: 1;
-  padding: 20px;
-}
-.charts {
-  display: flex;
-  justify-content: space-between;
-}
-.user-section {
-  display: flex;
-  margin-top: 20px;
-  padding: 20px;
-}
-
-/* user-list.component.css */
-.user-list {
-  width: 50%;
-}
-.tabs button {
-  margin-right: 10px;
-}
-ul {
-  list-style: none;
-  padding: 0;
-}
-li {
-  cursor: pointer;
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-.user-info {
   display: flex;
   flex-direction: column;
 }
 
-/* user-detail.component.css */
-.user-detail {
-  width: 70%;
-  padding-left: 20px;
+.charts {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.user-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+/* Ajustes para que los componentes ocupen el mismo alto y se alineen correctamente */
+app-user-list,
+app-user-detail {
+  flex: 1;
+  background-color: #6d6d6d;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+app-user-list {
+  border: 2px solid #00ff;
+}
+
+app-user-detail {
+  background-color: #6d6d6d;
 }
