--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,14 +1,16 @@
+<!-- user-list.component.html -->
 <div class="user-list">
   <div class="tabs">
-    <button (click)="selectedUserType='Profesores'">Profesores</button>
-    <button (click)="selectedUserType='Estudiantes'">Estudiantes</button>
-    <button (click)="selectedUserType='Empresas'">Empresas</button>
+    <button [class.selected]="selectedUserType === 'Profesores'" (click)="selectedUserType='Profesores'">Profesores</button>
+    <button [class.selected]="selectedUserType === 'Estudiantes'" (click)="selectedUserType='Estudiantes'">Estudiantes</button>
+    <button [class.selected]="selectedUserType === 'Empresas'" (click)="selectedUserType='Empresas'">Empresas</button>
   </div>
   <ul>
-    <li *ngFor="let user of filteredUsers" (click)="selectUser(user)">
-      <img *ngIf="user.type !== 'Empresas'" [src]="'path/to/images/' + user.id + '.png'" alt="{{ user.name }}">
-      <div class="user-info">
-        <span>{{ user.name }}</span>
+    <li *ngFor="let user of filteredUsers" (click)="selectUser(user)"[class.selected]="user.id === selectedUserId">
+      
+      <img *ngIf="user.image" [src]="user.image" alt="{{ user.name }}">
+      <div>
+        <strong>{{ user.name }}</strong>
         <p>{{ user.email }}</p>
       </div>
     </li>
