se organizaron las medias todos los px se comvirtieron a rem

--- a/src/app/views/registro/registro.component.html
+++ b/src/app/views/registro/registro.component.html
@@ -162,7 +162,7 @@
                  <div>
                      <label class="pure-material-textfield-outlined largo" for="">
                          <select class="tipo" id="tipo2" required>
-                             <option selected disabled value="">Tipo de Empresa</option>
+                             <option selected disabled value="">--Tipo de Empresa--</option>
                              <option value="1">Pequeña</option>
                              <option value="2">Mediana</option>
                              <option value="3">Grande</option>
@@ -183,6 +183,7 @@
                          <span>Telefono</span>
                      </label>
                  </div>
+                 
      
                  <div>
                      <label class="pure-material-textfield-outlined largo">
@@ -190,6 +191,9 @@
                          <span>Sitio wed (opcional)</span>
                      </label>
                  </div>
+
+               
+                 
      
                  <div class="terms">
                      <div class="terms">
@@ -199,6 +203,9 @@
                        name="acceptTerms" 
                        autocomplete="off"/><label for="acceptTerms">Acepto <span class="color">Términos y Condiciones </span> y <span class="color">Politicas de proteccion de Datos</span></label> 
                    </div>
+
+
+
                </div>
   
               
@@ -256,7 +263,7 @@
                 <div>
                   <label class="pure-material-textfield-outlined largo" for="">
                       <select class="tipo" id="tipo1" required>
-                          <option selected disabled value="">Rol</option>
+                          <option selected disabled value="">--Rol--</option>
                           <option value="1">Estudiante</option>
                           <option value="2">Profesor</option>
                           
@@ -278,26 +285,25 @@
                       <span>Programa/Carrera</span>
                   </label>
               </div>
-  
+
               <div>
-                  <label class="pure-material-textfield-outlined largo" for="año">
-                      <input placeholder="" type="input" id="año" name="año" autocomplete="off" required>
-                      <span>Año de Ingreso (para estudiantes)</span>
-                  </label>
+                <label class="pure-material-textfield-outlined largo" for="año">
+                    <input placeholder="" type="input" id="año" name="año" autocomplete="off" required>
+                    <span>Año de ingreso (para estudiantes)</span>
+                </label>
               </div>
 
               <div>
                 <label class="pure-material-textfield-outlined largo" for="">
                     <select class="tipo" id="tipo3" required>
-                        <option selected disabled value="">periodo</option>
-                        <option value="1">primer semestre</option>
+                        <option selected disabled value="">--Periodo--</option>
+                        <option value="1">Primers semestre</option>
                         <option value="2">segundo semestre</option>
                         
                     </select>
                 </label>
             </div>
-  
-  
+             
   
               <div class="terms">
                   <div class="terms">
@@ -307,7 +313,7 @@
                     name="acceptTerms" 
                     autocomplete="off"/><label for="acceptTerms">Acepto <span class="color">Términos y Condiciones </span> y <span class="color">Politicas de proteccion de Datos</span></label> 
                 </div>
-            </div>
+             </div>
   
            
   
@@ -316,6 +322,7 @@
               </div>
           </form>
       </div>
+
     </div> 
       
      <!--end register-->
